# rust-libtls

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  libtls-sys  search-index.js  settings.html  source-files.js  tokio-libtls
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  ci.yml  main.yml
.travis/: before_install.sh
examples/: Cargo.toml  config.rs  config_builder.rs  connect.rs  connect_async.rs  echo.rs  examples.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/libtls/error/: trait.LastError.js
implementors/mio/event_imp/: trait.Evented.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/tokio_io/async_read/: trait.AsyncRead.js
implementors/tokio_io/async_write/: trait.AsyncWrite.js
implementors/tokio_libtls/prelude/: trait.AsyncRead.js  trait.AsyncWrite.js  trait.Future.js  trait._.js
libtls/: Cargo.toml  all.html  build.rs  constant.TLS_API.html  constant.TLS_CRL_REASON_AA_COMPROMISE.html  constant.TLS_CRL_REASON_AFFILIATION_CHANGED.html  constant.TLS_CRL_REASON_CA_COMPROMISE.html  constant.TLS_CRL_REASON_CERTIFICATE_HOLD.html  constant.TLS_CRL_REASON_CESSATION_OF_OPERATION.html  constant.TLS_CRL_REASON_KEY_COMPROMISE.html  constant.TLS_CRL_REASON_PRIVILEGE_WITHDRAWN.html  constant.TLS_CRL_REASON_REMOVE_FROM_CRL.html  constant.TLS_CRL_REASON_SUPERSEDED.html  constant.TLS_CRL_REASON_UNSPECIFIED.html  constant.TLS_MAX_SESSION_ID_LENGTH.html  constant.TLS_OCSP_CERT_GOOD.html  constant.TLS_OCSP_CERT_REVOKED.html  constant.TLS_OCSP_CERT_UNKNOWN.html  constant.TLS_OCSP_RESPONSE_INTERNALERROR.html  constant.TLS_OCSP_RESPONSE_MALFORMED.html  constant.TLS_OCSP_RESPONSE_SIGREQUIRED.html  constant.TLS_OCSP_RESPONSE_SUCCESSFUL.html  constant.TLS_OCSP_RESPONSE_TRYLATER.html  constant.TLS_OCSP_RESPONSE_UNAUTHORIZED.html  constant.TLS_PROTOCOLS_ALL.html  constant.TLS_PROTOCOLS_DEFAULT.html  constant.TLS_PROTOCOL_TLSv1.html  constant.TLS_PROTOCOL_TLSv1_0.html  constant.TLS_PROTOCOL_TLSv1_1.html  constant.TLS_PROTOCOL_TLSv1_2.html  constant.TLS_TICKET_KEY_SIZE.html  constant.TLS_WANT_POLLIN.html  constant.TLS_WANT_POLLOUT.html  fn.init.html  index.html  macro.try_tls!.html  macro.try_tls.html  sidebar-items.js
libtls-sys/: Cargo.toml  build.rs
libtls-sys/src/: lib.rs
libtls/config/: fn.default_ca_cert_file.html  fn.load_file.html  fn.parse_protocols.html  fn.unload_file.html  index.html  sidebar-items.js  struct.TlsConfig.html  struct.TlsConfigBuilder.html
libtls/error/: enum.TlsError.html  index.html  sidebar-items.js  trait.LastError.html  type.Result.html
libtls/src/: config.rs  error.rs  lib.rs  tls.rs  util.rs
libtls/tests/: eccert.crt  eccert.csr  eccert.key
libtls/tls/: index.html  sidebar-items.js  struct.Tls.html  type.TlsReadCb.html  type.TlsWriteCb.html
libtls_sys/: all.html  constant.BIG_ENDIAN.html  constant.BYTE_ORDER.html  constant.FD_SETSIZE.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT64_MAX.html  constant.INT64_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTMAX_MAX.html  constant.INTMAX_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST64_MAX.html  constant.INT_LEAST64_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.LITTLE_ENDIAN.html  constant.PDP_ENDIAN.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  constant.SIZE_MAX.html  constant.TLS_API.html  constant.TLS_CRL_REASON_AA_COMPROMISE.html  constant.TLS_CRL_REASON_AFFILIATION_CHANGED.html  (+437 more)
src/libtls/: config.rs.html  error.rs.html  lib.rs.html  tls.rs.html  util.rs.html
src/libtls_sys/: lib.rs.html
src/tokio_libtls/: error.rs.html  lib.rs.html  prelude.rs.html
tokio-libtls/: Cargo.toml
tokio-libtls/src/: error.rs  lib.rs  prelude.rs
tokio_libtls/: all.html  index.html  sidebar-items.js  struct.AsyncTls.html  struct.AsyncTlsOptions.html  struct.TlsStream.html  type.AsyncTlsStream.html
tokio_libtls/error/: enum.AsyncTlsError.html  index.html  sidebar-items.js
tokio_libtls/prelude/: enum.Async.html  enum.AsyncSink.html  index.html  sidebar-items.js  struct.TcpStream.html  struct.TlsConfigBuilder.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html  trait.Future.html  trait.IntoFuture.html  trait.Sink.html  trait.Stream.html  trait._.html  type.Poll.html  type.StartSend.html
tokio_libtls/prelude/error/: enum.TlsError.html  index.html  trait.LastError.html  type.Result.html
tokio_libtls/prelude/future/: enum.Either.html  enum.MaybeDone.html  fn.abortable.html  fn.err.html  fn.join.html  fn.join3.html  fn.join4.html  fn.join5.html  fn.join_all.html  fn.lazy.html  fn.maybe_done.html  fn.ok.html  fn.pending.html  fn.poll_fn.html  fn.ready.html  fn.select.html  fn.select_all.html  fn.select_ok.html  fn.try_join.html  fn.try_join3.html  fn.try_join4.html  fn.try_join5.html  fn.try_join_all.html  fn.try_select.html  index.html  sidebar-items.js  struct.AbortHandle.html  struct.AbortRegistration.html  struct.Abortable.html  struct.Aborted.html  struct.AndThen.html  struct.CatchUnwind.html  struct.ErrInto.html  struct.Flatten.html  struct.FlattenSink.html  struct.FlattenStream.html  struct.Fuse.html  struct.FutureObj.html  (+43 more)
(+104 files in other folders)
