[package]
name = "libtls-sys"
version = "0.1.1-alpha"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "FFI bindings for LibreSSL's libtls library."
repository = "https://github.com/reyk/rust-libtls"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["libressl", "openbsd"]
links = "libtls"
build = "build.rs"

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[build-dependencies]
bindgen = "0.51.1"
pkg-config = "0.3.16"
