[package]
name = "libtls-sys"
version = "1.1.0-alpha.2"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "FFI bindings for LibreSSL's libtls."
repository = "https://github.com/reyk/rust-libtls"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["libressl", "openbsd"]
documentation = "https://reyk.github.io/rust-libtls/libtls_sys/"
links = "libtls"
build = "build.rs"

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[build-dependencies]
bindgen = "0.51.1"
pkg-config = "0.3.16"
num_cpus = "1.11.0"
