[package]
name = "libtls-sys"
version = "2.0.0"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "FFI bindings for LibreSSL's libtls."
repository = "https://github.com/reyk/rust-libtls"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["libressl", "openbsd"]
links = "libtls"
build = "build.rs"

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[build-dependencies]
bindgen = "0.53.2"
pkg-config = "0.3.17"
num_cpus = "1.12.0"
