[package]
name = "libtls"
version = "1.0.0-alpha6"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Rust bindings for LibreSSL's libtls library."
repository = "https://github.com/reyk/rust-libtls"
categories = ["cryptography", "api-bindings"]
keywords = ["crypto", "tls", "ssl", "libressl", "openbsd"]
documentation = "https://reyk.github.io/rust-libtls/libtls/"

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[dependencies]
libtls-sys = { path = "../libtls-sys", version = "1.0.0-alpha6" }

[dev-dependencies]
rand = "0.7.2"
