[package]
name = "tokio-libtls"
version = "1.1.0-beta.2"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Tokio bindings for LibreSSL's libtls."
repository = "https://github.com/reyk/rust-libtls"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["tokio", "tls", "ssl", "libressl", "openbsd"]
documentation = "https://reyk.github.io/rust-libtls/tokio_libtls/"

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[dependencies]
futures = "0.3"
libtls = { path = "../libtls", version = "1.1.0-beta.2" }
mio = "0.6.20"
tokio = { version = "0.2", features = ["io-driver", "tcp", "time"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
