[package]
name = "tokio-libtls"
version = "1.2.0"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "Tokio bindings for LibreSSL's libtls."
repository = "https://github.com/reyk/rust-libtls"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["tokio", "tls", "ssl", "libressl", "openbsd"]

[badges]
travis-ci = { repository = "reyk/rust-libtls", branch = "master" }

[dependencies]
futures = "0.3.4"
libtls = { path = "../libtls", version = "1.2.0" }
mio = "0.6.21"
tokio = { version = "0.2.16", features = ["io-driver", "tcp", "time"] }

[dev-dependencies]
tokio = { version = "0.2.16", features = ["full"] }
